fix: :lipstick: fix profile viewer role alignment

--- a/src/app/organisms/profile-viewer/ProfileViewer.scss
+++ b/src/app/organisms/profile-viewer/ProfileViewer.scss
@@ -18,7 +18,7 @@
     padding-bottom: var(--sp-normal);
 
     &__info {
-      align-self: flex-end;
+      align-self: center;
       flex: 1;
       min-width: 0;
 
@@ -30,9 +30,10 @@
       }
     }
     &__role {
-      align-self: flex-end;
+      align-self: center;
       & > .text {
         margin-bottom: var(--sp-ultra-tight);
+        
       }
     }
   }
